# focus

./: .gitignore  .gitmodules  README.md
example/: scope.py
example/firmware/: CMakeLists.txt  flash.sh  pub.py
example/firmware/cubemx/: cubemx.ioc
example/firmware/src/: focus_port.c  main.c
example/firmware/src/include/: focus_config.h  msgpack.h
example/firmware/src/include/arch/: cc.h
example/hardware/focus-dev/: focus-dev.kicad_sch  lib.kicad_sym  power.kicad_sch
example/hardware/focus-dev/lib.pretty/: LV14340.kicad_mod  spst_6x3mm.kicad_mod
firmware/: CMakeLists.txt
firmware/src/: main.c
firmware/src/control/: current_loop.c  current_loop.h  pid.c  pid.h
firmware/src/drivers/: drv_encoder_as5600.c  drv_encoder_as5600.h  drv_inverter.c  drv_inverter.h  drv_memory_flash.c  drv_memory_flash.h  drv_memory_ram.c  drv_memory_ram.h
firmware/src/memory/: memory_block.h  memory_controller.c  memory_controller.h
firmware/src/system/: if_encoder.c  if_encoder.h  if_inverter.c  if_inverter.h  if_memory.c  if_memory.h  status.h
focus/: biquad.c  core.c  debug.c  math.c  pid.c  smo.c
focus/include/focus/: api.h  biquad.h  config.h  debug.h  fsm.h  math.h  pid.h  port.h  smo.h
hardware/focus-dev/: control.kicad_sch  encoder.kicad_sch  focus-dev.kicad_pcb  focus-dev.kicad_pro  focus-dev.kicad_sch  inverter.kicad_sch  power.kicad_sch
hardware/focus-dev/lib.pretty/: PA4341.XXXNLT.kicad_mod  XT60PW-M.kicad_mod
software/firmware/: CMakeLists.txt  pub.py  scope.py  sub.py  telnet.sh
software/firmware/cubemx/: cubemx.ioc
software/firmware/src/: driver.h  driver_as5600.c  driver_flash.c  driver_inverter.c  drv_as5600.c  drv_as5600.h  drv_flash.c  drv_flash.h  drv_inverter.c  drv_inverter.h  drv_ram.c  drv_ram.h  focus_port.c  freertos.c  main.c  msc_disk.c  msgpack.c  sys_arch.c  telnet.c  usb_descriptors.c
software/firmware/src/include/: FreeRTOSConfig.h  focus_config.h  lwipopts.h  telnet.h  tusb_config.h
software/firmware/src/include/arch/: cc.h
software/focus/: core.c  current_loop.c  current_loop.h  encoder.c  focus.c  focus.h  fsm.c  inverter.c  math.c  memory.c  memory_controller.c  memory_reg.c  pid.c
software/focus/include/: focus.h
software/focus/include/focus/: api.h  config.h  config_valid.h  encoder.h  inverter.h  math.h  memory.h  memory_controller.h  memory_reg.h  pid.h  port.h  status.h
